examples/invalid/bad-effect-graph.whip
workflow BadEffectGraph

queue backlog {
  tracker builtin
}

agent worker {
  provider fixture
  profile "repo-writer"
  capacity 1
}

rule bad_after
  when backlog has ready item as item
=> {
  after ghost succeeds {
    tell worker "missing claim"
  }

  claim item as claim

  after claim retries {
    tell worker "bad predicate"
  }
}
